--- a/sock-drop-score-submission.html
+++ b/sock-drop-score-submission.html
@@ -114,6 +114,12 @@
 
 <body id="landing" style="background: #FED202; width: 100%;">
 
+    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+
+    <audio id="player" style="position: absolute; bottom: 40px; left: 40px; padding: 0px; z-index: 100;" autoplay loop>
+      <source src="assets/audio/jammin.mp3" type="audio/mpeg" loop="loop">
+    </audio>
+
   <!-- Main -->
     <!-- <main style="display: flex; align-items: center; justify-content: center;"> -->
     <main>
@@ -146,7 +152,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.cannaco.us/" style="text-decoration: none;">
+                        <a href="https://www.cannaco-shop.com/" style="text-decoration: none;">
                             <button id="start" class="btn btn-link btn-block" style="margin-top: 24px!important; color: #125936!important;">Return to Marketplace</button>
                         </a>
                     </li>
@@ -191,32 +197,7 @@
         </div>
 
     </main>
-  
-  
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
-
-  <script>
-      // Your web app's Firebase configuration
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      var firebaseConfig = {
-          apiKey: "AIzaSyCf2n1NutvsngwnnMRM6eNdFxuKsJ6v0y8",
-          authDomain: "cannaco-247e5.firebaseapp.com",
-          databaseURL: "https://cannaco-247e5-default-rtdb.firebaseio.com",
-          projectId: "cannaco-247e5",
-          storageBucket: "cannaco-247e5.appspot.com",
-          messagingSenderId: "180295808837",
-          appId: "1:180295808837:web:4277f7f5c37238859db02c",
-          measurementId: "G-N80VD84ZGK"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-  </script>
   
 </body>
   
