--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </div>
 
 
-<body style="background: #FED202; width: 100%; overflow: hidden;">
+<body id="landing" style="background: #FED202; width: 100%;">
   <!-- Main -->
     <!-- <main style="display: flex; align-items: center; justify-content: center;"> -->
     <main>
