--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -421,7 +421,7 @@
       })();
     </script>
 
-<body>
+<body style="overflow: hidden">
 
   <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
 
@@ -542,7 +542,7 @@
   <script src="public/sock-drop/script.js"></script>
   
   
-</body style="overflow: hidden">
+</body>
   
   
   
