--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">WIN your FREE Socks!</h1>
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">WIN YOUR FREE SOCKS!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win a pair of Cannaco Socks <br>Game available April 20!</h1> -->
             </div>
 
