--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -429,6 +429,11 @@
     <source src="assets/audio/jammin.mp3" type="audio/mpeg" loop="loop">
   </audio>
 
+
+  <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-content: center; justify-content: center;">
+    <img style="max-width: 60%;" src="assets/sock-drop/back-drop-light.png">
+  </div>
+
   
   <!-- Main -->
   <main id="game">
