--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -430,13 +430,13 @@
   </audio>
 
 
-  <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-content: center; justify-content: center;">
-    <img style="max-width: 60%;" src="assets/sock-drop/back-drop-light.png">
-  </div>
-
   
   <!-- Main -->
   <main id="game">
+
+      <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+        <img style="max-width: 60%; max-height: 60%;" src="assets/sock-drop/back-drop-light.png">
+      </div>
 
       <div id="score_holder">
         <div id="spaceship">
