--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -123,13 +123,6 @@
       }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/6384a3f7248a9ad1bfe24ade3/899721365c82e8dd8f4a61433.js");
   </script>
 
-  <!-- NPS Score Survey with Delighted -->
-  <script type="text/javascript">
-    !function(e,t,r,n){if(!e[n]){for(var a=e[n]=[],i=["survey","reset","config","init","set","get","event","identify","track","page","screen","group","alias"],s=0;s<i.length;s++){var c=i[s];a[c]=a[c]||function(e){return function(){var t=Array.prototype.slice.call(arguments);a.push([e,t])}}(c)}a.SNIPPET_VERSION="1.0.1";var o=t.createElement("script");o.type="text/javascript",o.async=!0,o.src="https://d2yyd1h5u9mauk.cloudfront.net/integrations/web/v1/library/"+r+"/"+n+".js";var p=t.getElementsByTagName("script")[0];p.parentNode.insertBefore(o,p)}}(window,document,"6kmW7mndJDALngNy","delighted");
-
-    delighted.survey();
-  </script>
-
 
 </head>
 
@@ -434,7 +427,7 @@
   <!-- Main -->
   <main id="game">
 
-      <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+      <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; z-index: -10;">
         <img style="max-width: 60%; max-height: 60%;" src="assets/sock-drop/back-drop-light.png">
       </div>
 
