--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -502,6 +502,15 @@
       <div id="basket">
         <img id="basket-image" src="assets/sock-drop/canny-hyped.svg">
       </div>
+
+      <div id="canny_holder">
+        <div id="canny_body">
+          <img id="canny-default" src="assets/sock-drop/canny-default.svg">
+          <img id="canny-mild" src="assets/sock-drop/canny-mild.svg">
+          <img id="canny-medium" src="assets/sock-drop/canny-medium.svg">
+          <img id="canny-high" src="assets/sock-drop/scoreboard-high.svg">
+        </div>
+      </div>
       
       <div id="floor"></div>
 
