--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -427,7 +427,7 @@
   <!-- Main -->
   <main id="game">
 
-      <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; z-index: -10;">
+      <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
         <img style="max-width: 60%; max-height: 60%;" src="assets/sock-drop/back-drop-light.png">
       </div>
 
