--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -500,10 +500,7 @@
       </div>
 
       <div id="basket">
-        <img id="basket-image" src="assets/sock-drop/canny-hyped.svg">
-      </div>
-
-      <div id="canny_holder">
+        <!-- <img id="basket-image" src="assets/sock-drop/canny-hyped.svg"> -->
         <div id="canny_body">
           <img id="canny-default" src="assets/sock-drop/canny-default.svg">
           <img id="canny-mild" src="assets/sock-drop/canny-mild.svg">
@@ -511,6 +508,15 @@
           <img id="canny-high" src="assets/sock-drop/canny-high.svg">
         </div>
       </div>
+
+      <!-- <div id="canny_holder">
+        <div id="canny_body">
+          <img id="canny-default" src="assets/sock-drop/canny-default.svg">
+          <img id="canny-mild" src="assets/sock-drop/canny-mild.svg">
+          <img id="canny-medium" src="assets/sock-drop/canny-medium.svg">
+          <img id="canny-high" src="assets/sock-drop/canny-high.svg">
+        </div>
+      </div> -->
       
       <div id="floor"></div>
 
