--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -384,7 +384,7 @@
 
                 </form>
                 
-                <blockquote style="padding: 16px 24px 24px 24px; width: 100%;">
+                <blockquote style="padding: 8px 24px 24px 24px; width: 100%;">
                   <button id="restart" class="btn btn-outline btn-block" style="border-radius: 6px!important;">Retry</button>
                 </blockquote>
               </div>
@@ -427,7 +427,7 @@
   <!-- Main -->
   <main id="game">
 
-      <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;">
+      <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; z-index: -10;">
         <img style="max-width: 60%; max-height: 60%;" src="assets/sock-drop/back-drop-light.png">
       </div>
 
@@ -501,10 +501,6 @@
 
       <div id="basket">
         <img id="basket-image" src="assets/sock-drop/canny-hyped.svg">
-        <!-- <img id="canny-default" src="assets/sock-drop/canny-default.svg">
-        <img id="canny-mild" src="assets/sock-drop/canny-mild.svg">
-        <img id="canny-medium" src="assets/sock-drop/canny-medium.svg">
-        <img id="canny-high" src="assets/sock-drop/canny-high.svg"> -->
       </div>
       
       <div id="floor"></div>
