--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -500,7 +500,11 @@
       </div>
 
       <div id="basket">
-        <img id="basket-image" src="assets/sock-drop/canny-hyped.svg">
+        <div id="basket-image" src="assets/sock-drop/canny-hyped.svg">
+        <img id="canny-default" src="assets/sock-drop/canny-default.svg">
+        <img id="canny-mild" src="assets/sock-drop/canny-mild.svg">
+        <img id="canny-medium" src="assets/sock-drop/canny-medium.svg">
+        <img id="canny-high" src="assets/sock-drop/canny-high.svg">
       </div>
       
       <div id="floor"></div>
