--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -384,7 +384,7 @@
 
                 </form>
                 
-                <blockquote style="padding: 16px 24px 24px 24px; width: 100%;">
+                <blockquote style="padding: 8px 24px 24px 24px; width: 100%;">
                   <button id="restart" class="btn btn-outline btn-block" style="border-radius: 6px!important;">Retry</button>
                 </blockquote>
               </div>
@@ -500,7 +500,7 @@
       </div>
 
       <div id="basket">
-        <div id="basket-image" src="assets/sock-drop/canny-hyped.svg">
+        <img id="basket-image" src="assets/sock-drop/canny-hyped.svg">
       </div>
       
       <div id="floor"></div>
