--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -446,6 +446,10 @@
         </div>
       </div>
 
+      <div id="homerchu">
+        <img src="assets/sock-drop/homerchu.png">
+      </div>
+
       <!-- <section id="hero" class="full-row fluid-container">
         <div class="row content-row align-items-center justify-content-between">
           <div class="col col-1">
