LEAVE IT BE MY G

--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -504,13 +504,7 @@
       </div>
 
       <div id="basket">
-        <div id="basket_holder">
-          <!-- <img id="basket-image" src="assets/sock-drop/canny-default.svg"> -->
-          <img id="canny-default" src="assets/sock-drop/canny-default.svg">
-          <img id="canny-mild" src="assets/sock-drop/canny-mild.svg">
-          <img id="canny-medium" src="assets/sock-drop/canny-medium.svg">
-          <img id="canny-high" src="assets/sock-drop/canny-high.svg">
-        </div>
+          <img id="basket-image" src="assets/sock-drop/canny-default.svg">
       </div>
       
       <div id="floor"></div>
