--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -450,6 +450,10 @@
         <img src="assets/sock-drop/homerchu.png">
       </div>
 
+      <div id="rick">
+        <img src="assets/sock-drop/rick.png">
+      </div>
+
       <!-- <section id="hero" class="full-row fluid-container">
         <div class="row content-row align-items-center justify-content-between">
           <div class="col col-1">
