--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -446,13 +446,13 @@
         </div>
       </div>
 
-      <div id="homerchu">
+      <!-- <div id="homerchu">
         <img src="assets/sock-drop/homerchu.png">
       </div>
 
       <div id="rick">
         <img src="assets/sock-drop/rick.png">
-      </div>
+      </div> -->
 
       <!-- <section id="hero" class="full-row fluid-container">
         <div class="row content-row align-items-center justify-content-between">
