--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -446,13 +446,29 @@
         </div>
       </div>
 
-      <!-- <div id="homerchu">
+      <div id="homerchu">
         <img src="assets/sock-drop/homerchu.png">
       </div>
 
       <div id="rick">
         <img src="assets/sock-drop/rick.png">
-      </div> -->
+      </div>
+
+      <div id="homerchu2">
+        <img src="assets/sock-drop/homerchu.png">
+      </div>
+
+      <div id="rick2">
+        <img src="assets/sock-drop/rick.png">
+      </div>
+
+      <div id="homerchu3">
+        <img src="assets/sock-drop/homerchu.png">
+      </div>
+
+      <div id="rick3">
+        <img src="assets/sock-drop/rick.png">
+      </div>
 
       <!-- <section id="hero" class="full-row fluid-container">
         <div class="row content-row align-items-center justify-content-between">
