--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
                     }
                 </script>
                 <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto; margin-top: 24px;">Game Available In:</h1> -->
-                <a href="sock-drop-game.html" style="text-decoration: none;">
+                <!-- <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">START GAME</button>
-                </a>
+                </a> -->
             </blockquote>
 
 
 
-            <!-- <p id="demo" style="width: 100%;
+            <p id="demo" style="width: 100%;
             font-size: 56px;
             text-align: center;
             background: #003214;
@@ -207,9 +207,9 @@
             color: #ffd200;
             padding: 24px 40px;
             font-weight: 700;
-            margin-top: 24px;"></p> -->
+            margin-top: 24px;"></p>
 
-            <!-- <script>
+            <script>
             // Set the date we're counting down to
             var countDownDate = new Date("April 20, 2021 00:00:00").getTime();
             
@@ -238,7 +238,9 @@
                 document.getElementById("demo").innerHTML = "EXPIRED";
               }
             }, 1000);
-            </script> -->
+            </script>
+
+
             <blockquote style="width: 100%; text-align: center; padding: 24px 0px 0px 0px!important;">
                 <!-- <div class="body-medium color-background">We use cookies <span class="btn-link body" aria-pressed="true" data-toggle="modal" data-target="#privacy_policy_modal" style="color:#145a3c!important;">Learn More 🍪</span></div> -->
                 <nav class="align-items-center justify-content-between">
