--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -50,11 +50,6 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <!-- Testing Stylesheets -->    
-  <!-- <link rel="stylesheet" href="http://localhost:3000/common.css"> -->
-  <!-- <link rel="stylesheet" href="http://localhost:3000/index.css"> -->
-  <!-- <link rel="stylesheet" href="http://localhost:3000/assets/fonts/marselis/font-stylesheet.css"> -->
-
 
   <!-- Publishing Stylesheets -->    
   <link rel="stylesheet" href="public/common.css">
@@ -72,38 +67,33 @@
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/corejs-typeahead/1.3.1/typeahead.bundle.min.js" type="text/javascript"></script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.3.15/slick.min.js" type="text/javascript"></script>
 
-  <!-- Local Testing Scripts -->  
-  <!-- <script src="http://localhost:3000/base.js" type="text/javascript"></script> -->
-  <!-- <script src="http://localhost:3000/homepage.js" type="text/javascript"></script> -->
-  <!-- <script src="http://localhost:3000/shopping-bag.js" type="text/javascript"></script> -->
 
   <!-- Publishing Scripts -->  
   <script src="public/base.js" type="text/javascript"></script>
   <script src="public/header.js" type="text/javascript"></script>
   <script src="public/homepage-gtm.js" type="text/javascript"></script>
   <script src="public/shopping-bag.js" type="text/javascript"></script>
+  <script src="public/konami.js" type="text/javascript"></script>
   <!-- <script src="https://www.api.cannaco.us/index.js" type="text/javascript"></script> -->
 
 
-    <!-- Age Verification Modal -->
-    <script>
-
-      // This code prevents user from closing age verification modal without selecting yes
-      $('#game_rules_modal').modal({
-          backdrop: 'static', keyboard: false
+  <!-- Age Verification Modal -->
+  <script>
+    // This code prevents user from closing age verification modal without selecting yes
+    $('#game_rules_modal').modal({
+        backdrop: 'static', keyboard: false
+    });
+    
+    // This code is to trigger age verification modal on page load but also store local cookies and prevents display on successive returns
+    $( document ).ready(function() {
+          if (localStorage.getItem("pageloadcount")) {
+              $("#game_rules_modal").hide();
+          } else {
+            $("#game_rules_modal").addClass('show');
+          }
+          localStorage.setItem("pageloadcount", "1");
       });
-      
-      // This code is to trigger age verification modal on page load but also store local cookies and prevents display on successive returns
-      $( document ).ready(function() {
-            if (localStorage.getItem("pageloadcount")) {
-                $("#game_rules_modal").hide();
-            } else {
-              $("#game_rules_modal").addClass('show');
-            }
-            localStorage.setItem("pageloadcount", "1");
-        });
-
-    </script>
+  </script>
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -115,6 +105,7 @@
 
     gtag('config', 'G-51Z1ZXNQQF');
   </script>
+
   
   <!-- Global site tag - Mailchimp Remarketing -->
   <script id="mcjs">
