--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -70,9 +70,6 @@
 
   <!-- Publishing Scripts -->  
   <script src="public/base.js" type="text/javascript"></script>
-  <script src="public/header.js" type="text/javascript"></script>
-  <script src="public/homepage-gtm.js" type="text/javascript"></script>
-  <script src="public/shopping-bag.js" type="text/javascript"></script>
   <script src="public/konami.js" type="text/javascript"></script>
   <!-- <script src="https://www.api.cannaco.us/index.js" type="text/javascript"></script> -->
 
@@ -412,6 +409,11 @@
   <audio id="player" style="position: absolute; bottom: 40px; left: 40px; padding: 0px; z-index: 100;" autoplay loop>
     <source src="assets/audio/jammin.mp3" type="audio/mpeg" loop="loop">
   </audio>
+
+
+  <div id="cannami_code">
+    <img src="assets/sock-drop/CCK.png">
+  </div>
 
 
   
