--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -416,7 +416,7 @@
   <!-- Main -->
   <main id="game">
 
-      <div id="cannami_image" style="position: relative; width: 100%; height: 100%; display: none; align-items: center; justify-content: center; overflow: hidden; z-index: 100;">
+      <div id="cannami_image" class="active" style="position: relative; width: 100%; height: 100%; display: none; align-items: center; justify-content: center; overflow: hidden; z-index: 100;">
         <img style="max-width: 60%; max-height: 60%;" src="assets/sock-drop/CCK.png">
       </div>
 
