--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -421,7 +421,7 @@
       </div>
 
       <div id="background-image" style="position: relative; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; overflow: hidden;">
-        <img style="max-width: 60%; max-height: 60%;" src="assets/sock-drop/back-drop-light.png">
+        <img src="assets/sock-drop/back-drop-light.png">
       </div>
 
       <div id="score_holder">
