--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -123,7 +123,7 @@
           -moz-box-shadow: 0 0 80px rgba(0, 0, 0, 0.4);
           box-shadow: 0 0 80px rgb(0 0 0 / 40%); border-radius: 24px; background: #FED202; overflow: hidden; padding: 24px 0px 0px 0px;">
 
-            <div class="row">
+            <div class="row" style="padding: 16px;">
               <div class="col col-1">
                 <img src="assets/sock-drop/wttp.png">
               </div>
@@ -134,7 +134,10 @@
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Use finger on mobile.</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Collect as many socks as you can.</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Avoid the pot leaves.</h1>
-                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top 5 Scores win socks!</h1>
+                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top 5 Scores Win Socks!</h1>
+                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top Score Wins Pickle Pipe!</h1>
+                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• CANNAMI CODE: A←→↑↓↑↓←→B</h1>
+                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Catch the Golden Nugg!</h1>
                 </blockquote>
                 <a href="sock-drop-game.html" style="text-decoration: none;">
                   <button style="margin-top: 24px;" id="start" class="btn btn-tertiary btn-block" data-dismiss="modal" aria-label="Close">Let's Do This!</button>
@@ -348,16 +351,15 @@
                     </div>
                   </div>
 
-
                   <div class="form-group">
                     <label for="drip-name">Name</label><br>
-                    <input class="form-control" type="text" id="drip-name" name="fields[name]" value="" required>
+                    <input class="form-control" type="text" id="drip-name" name="fields[name]" value="" placeholder="Enter Name" required>
                     <div class="invalid-feedback">Add Full Name.</div>
                   </div>   
                 
                   <div class="form-group">
-                      <label for="drip-email">Email Address</label><br>
-                      <input class="form-control" type="email" id="drip-email" name="fields[email]" value="" required>
+                      <label for="drip-email">Email</label><br>
+                      <input class="form-control" type="email" id="drip-email" name="fields[email]" value="" placeholder="Enter Email" required>
                       <div class="invalid-feedback">Add Email Address.</div>
                   </div>
                 
