--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -136,8 +136,8 @@
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Avoid the pot leaves.</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top 5 Scores Win Socks!</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top Score Wins Pickle Pipe!</h1>
-                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• CANNAMI CODE: A←→↑↓↑↓←→B</h1>
-                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Catch the Golden Nugg!</h1>
+                  <!-- <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• CANNAMI CODE: A←→↑↓↑↓←→B</h1>
+                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Catch the Golden Nugg!</h1> -->
                 </blockquote>
                 <a href="sock-drop-game.html" style="text-decoration: none;">
                   <button style="margin-top: 24px;" id="start" class="btn btn-tertiary btn-block" data-dismiss="modal" aria-label="Close">Let's Do This!</button>
