--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -118,10 +118,10 @@
     <!---- Game Rules Modal ---->
     <div id="game_rules_modal" class="request-form-modal modal fade" tabindex="-1" role="dialog" aria-labelledby="request-form-modal" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
+        <div class="modal-content" style="padding: 24px;">
           <div class="card product-card product-template-reduced" style="-webkit-box-shadow: 0 0 80px rgb(0 0 0 / 40%);
           -moz-box-shadow: 0 0 80px rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 80px rgb(0 0 0 / 40%); border-radius: 24px; background: #FED202; overflow: hidden; padding: 24px 0px 0px 0px;">
+          box-shadow: 0 0 80px rgb(0 0 0 / 40%); border-radius: 24px; background: #FED202; overflow: hidden;">
 
             <div class="row" style="padding: 16px;">
               <div class="col col-1">
