--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -127,15 +127,14 @@
               <div class="col col-1">
                 <img src="assets/sock-drop/wttp.png">
               </div>
-              <div class="col col-1" style="display: block; padding: 24px 24px 40px 24px;">
+              <div class="col col-1" style="display: block; padding: 16px 16px 16px 16px;">
                 <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px;">
                   <h1 class="subhead" style="color: #003214;">These are the Rules</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Use mouse on desktop.</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Use finger on mobile.</h1>
-                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Collect as many socks as you can.</h1>
+                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Collect the socks.</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Avoid the pot leaves.</h1>
-                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top 5 Scores Win Socks!</h1>
-                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top Score Wins Pickle Pipe!</h1>
+                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top 5 Scores Win prizes!</h1>
                   <!-- <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• CANNAMI CODE: A←→↑↓↑↓←→B</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Catch the Golden Nugg!</h1> -->
                 </blockquote>
