--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  
+
   <!-- Title -->
   <title>Cannaco</title>
 
@@ -126,7 +126,8 @@
 
             <div class="row" style="padding: 16px;">
               <div class="col col-1">
-                <img src="assets/sock-drop/wttp.png">
+                <!-- <img src="assets/sock-drop/wttp.png"> -->
+                <img src="assets/sock-drop/welcome-compact.png">
               </div>
               <div class="col col-1" style="display: block; padding: 16px 16px 16px 16px;">
                 <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px;">
