--- a/sock-drop-score-submission.html
+++ b/sock-drop-score-submission.html
@@ -21,20 +21,20 @@
   <link rel="mask-icon" href="https://www.cannaco.us/assets/favicon/safari-pinned-tab.svg" color="#F9B300">
   <meta name="msapplication-TileColor" content="#F9B300">
   <meta name="theme-color" content="#F9B300">
-  <meta name="description" content="Win Your FREE Pair of Cannaco Socks!">
+  <meta name="description" content="WIN Your FREE Socks!">
   
   
   <!--  Essential META Tags -->
   <meta property="og:title" content="CANNACO">
-  <meta property="og:description" content="Win Your FREE Pair of Cannaco Socks!">
-  <meta property="og:image" content="assets/imagery/landscape-format-2.png">
+  <meta property="og:description" content="WIN Your FREE Socks!">
+  <meta property="og:image" content="assets/imagery/social-share.png">
   <meta property="og:url" content="https://www.cannaco.us/sock-drop">
   <meta name="twitter:card" content="summary_large_image">
 
 
   <!--  Non-Essential, But Recommended -->
   <meta property="og:site_name" content="CANNACO">
-  <meta name="twitter:image:alt" content="Win Your FREE Pair of Cannaco Socks!">
+  <meta name="twitter:image:alt" content="WIN Your FREE Socks!">
   
   
   <!--  MailChimp Redirect -->
