Adding Google Analytics

--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
     // });
 </script>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-51Z1ZXNQQF"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JVFG9KZ4Z3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-51Z1ZXNQQF');
-  </script>
+  gtag('config', 'G-JVFG9KZ4Z3');
+</script>
   
-  <!-- Global site tag - Mailchimp Remarketing -->
-  <script id="mcjs">
-      ! function(c, h, i, m, p) {
-          m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p)
-      }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/6384a3f7248a9ad1bfe24ade3/899721365c82e8dd8f4a61433.js");
-  </script>
+<!-- Global site tag - Mailchimp Remarketing -->
+<script id="mcjs">
+    ! function(c, h, i, m, p) {
+        m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p)
+    }(document, "script", "https://chimpstatic.com/mcjs-connected/js/users/6384a3f7248a9ad1bfe24ade3/899721365c82e8dd8f4a61433.js");
+</script>
 
   <!-- NPS Score Survey with Delighted -->
   <!-- <script type="text/javascript">
