--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -94,15 +94,16 @@
   </script>
 
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-51Z1ZXNQQF"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JVFG9KZ4Z3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-51Z1ZXNQQF');
-  </script>
+  gtag('config', 'G-JVFG9KZ4Z3');
+</script>
+
 
   
   <!-- Global site tag - Mailchimp Remarketing -->
