--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">WIN Your FREE Socks!</h1>
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Opens April 10th!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win a pair of Cannaco Socks <br>Game available April 20!</h1> -->
             </div>
 
@@ -213,7 +213,7 @@
 
             <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("April 20, 2022 00:00:00").getTime();
+            var countDownDate = new Date("April 10, 2022 00:00:00").getTime();
             
             // Update the count down every 1 second
             var x = setInterval(function() {
