--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -249,7 +249,7 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Heather</th>
+                          <th scope="row">1. Eamonn</th>
                           <td>255</td>
                         </tr>
                         <tr>
